@@ -22,7 +22,7 @@ gschemdoc_TEXINFOS =	a_pan.texi a_zoom.texi g_funcs.texi g_hook.texi       \
 			o_text.texi o_undo.texi parsecmd.texi                 \
 			x_basic.texi x_color.texi x_dialog.texi x_event.texi  \
 			x_fileselect.texi x_grid.texi x_image.texi x_log.texi \
-			x_menus.texi x_multimulti.texi x_pagesel.texi         \
+			x_menus.texi x_pagesel.texi                           \
 			x_preview.texi x_print.texi x_script.texi             \
 			x_stroke.texi x_window.texi x_attribedit.texi         \
 			x_multiattrib.texi
