@@ -29,7 +29,6 @@ noweb/x_fileselect.nw
 noweb/x_image.nw
 noweb/x_log.nw
 noweb/x_multiattrib.nw
-noweb/x_multimulti.nw
 noweb/x_pagesel.nw
 noweb/x_print.nw
 noweb/x_script.nw
